{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 19,
  "lineage": "6c6a6b81-8110-a2e8-e92b-170459dc867b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-arms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:996051595311:instance/i-0bbe3615c945b1eeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbe3615c945b1eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0edcd92834d50b05b",
            "private_dns": "ip-172-31-15-72.ec2.internal",
            "private_ip": "172.31.15.72",
            "public_dns": "ec2-44-193-83-39.compute-1.amazonaws.com",
            "public_ip": "44.193.83.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b57ab04b8b8980aa",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c27626f6b56e3db0",
            "tags": {
              "Name": "podtatohead-arms"
            },
            "tags_all": {
              "Name": "podtatohead-arms"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5e7b989dce272d1"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-hats",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:996051595311:instance/i-0beb6d8edb8d1e868",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beb6d8edb8d1e868",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09476be975da52b20",
            "private_dns": "ip-172-31-0-153.ec2.internal",
            "private_ip": "172.31.0.153",
            "public_dns": "ec2-44-192-3-74.compute-1.amazonaws.com",
            "public_ip": "44.192.3.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-081d4d41f1b79515a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c27626f6b56e3db0",
            "tags": {
              "Name": "podtatohead-hats"
            },
            "tags_all": {
              "Name": "podtatohead-hats"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5e7b989dce272d1"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-legs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:996051595311:instance/i-0cad8d66203fbe90e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cad8d66203fbe90e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2754e864df4f549",
            "private_dns": "ip-172-31-4-85.ec2.internal",
            "private_ip": "172.31.4.85",
            "public_dns": "ec2-18-208-201-33.compute-1.amazonaws.com",
            "public_ip": "18.208.201.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-000dc4737cb7a10ef",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c27626f6b56e3db0",
            "tags": {
              "Name": "podtatohead-legs"
            },
            "tags_all": {
              "Name": "podtatohead-legs"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e5e7b989dce272d1"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "podtatohead-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043fe20f06f9f75a6",
            "arn": "arn:aws:ec2:us-east-1:996051595311:instance/i-0478ad6ada50caa1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0478ad6ada50caa1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e1f5fdeef0a71ef",
            "private_dns": "ip-172-31-10-98.ec2.internal",
            "private_ip": "172.31.10.98",
            "public_dns": "ec2-3-219-33-212.compute-1.amazonaws.com",
            "public_ip": "3.219.33.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05d02071bddecb305",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow-all-http",
              "allow-all-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c27626f6b56e3db0",
            "tags": {
              "Name": "podtatohead-main"
            },
            "tags_all": {
              "Name": "podtatohead-main"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0396a3e90b019dd56",
              "sg-0ee55001b733a957c"
            ]
          },
          "dependencies": [
            "aws_instance.podtatohead-arms",
            "aws_instance.podtatohead-hats",
            "aws_instance.podtatohead-legs",
            "aws_security_group.ingress-all-http",
            "aws_security_group.ingress-all-ssh",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996051595311:security-group/sg-0ee55001b733a957c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee55001b733a957c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-all-http",
            "name_prefix": "",
            "owner_id": "996051595311",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4e76e923a4d87a9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:996051595311:security-group/sg-0396a3e90b019dd56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0396a3e90b019dd56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-ssh",
            "name_prefix": "",
            "owner_id": "996051595311",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4e76e923a4d87a9"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}